chore: upgrade toolchain

--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@jcoreio/eslint-plugin-implicit-dependencies": "^1.0.2",
-    "@jcoreio/toolchain": "^3.9.3",
-    "@jcoreio/toolchain-circle": "^3.9.3",
-    "@jcoreio/toolchain-esnext": "^3.9.3",
-    "@jcoreio/toolchain-mocha": "^3.9.3",
-    "@jcoreio/toolchain-semantic-release": "^3.9.3",
-    "@jcoreio/toolchain-typescript": "^3.9.3",
+    "@jcoreio/eslint-plugin-implicit-dependencies": "^1.1.1",
+    "@jcoreio/toolchain": "^3.11.1",
+    "@jcoreio/toolchain-circle": "^3.11.1",
+    "@jcoreio/toolchain-esnext": "^3.11.1",
+    "@jcoreio/toolchain-mocha": "^3.11.1",
+    "@jcoreio/toolchain-semantic-release": "^3.11.1",
+    "@jcoreio/toolchain-typescript": "^3.11.1",
     "@types/chai": "^4.3.5",
     "@types/node": "^20.11.22",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "chai": "^4.3.7",
-    "eslint": "^8.43.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.0"
