--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   },
   "packageManager": "pnpm@8.11.0",
   "dependencies": {
-    "@babel/runtime": "^7.18.6",
+    "@babel/runtime": "^7.18.6"
+  },
+  "peerDependencies": {
     "zod": "^3.22.4"
   }
 }
