--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@jcoreio/eslint-plugin-implicit-dependencies": "^1.1.1",
-    "@jcoreio/toolchain": "^3.11.1",
-    "@jcoreio/toolchain-circle": "^3.11.1",
-    "@jcoreio/toolchain-esnext": "^3.11.1",
-    "@jcoreio/toolchain-mocha": "^3.11.1",
-    "@jcoreio/toolchain-semantic-release": "^3.11.1",
-    "@jcoreio/toolchain-typescript": "^3.11.1",
+    "@jcoreio/toolchain": "^5.5.1",
+    "@jcoreio/toolchain-circle": "^5.5.1",
+    "@jcoreio/toolchain-esnext": "^5.5.1",
+    "@jcoreio/toolchain-mocha": "^5.5.1",
+    "@jcoreio/toolchain-semantic-release": "^5.5.1",
+    "@jcoreio/toolchain-typescript": "^5.5.1",
     "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.11.22",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
     "chai": "^4.3.7",
-    "eslint": "^8.56.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint": "^9.17.0",
+    "globals": "^16.0.0",
+    "lint-staged": "^15.2.2",
     "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
@@ -36,7 +37,10 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": {
+        "import": "./dist/index.d.mts",
+        "default": "./dist/index.d.ts"
+      },
       "import": "./dist/index.mjs",
       "default": "./dist/index.js"
     }
@@ -45,11 +49,14 @@
   "engines": {
     "node": ">=16"
   },
-  "packageManager": "pnpm@8.11.0",
+  "packageManager": "pnpm@10.6.5",
   "dependencies": {
-    "@babel/runtime": "^7.18.6"
+    "@babel/runtime": "^7.26.0"
   },
   "peerDependencies": {
     "zod": "^3.22.4"
+  },
+  "@jcoreio/toolchain": {
+    "migratedVersion": "5.5.1"
   }
 }
